<resources>
    <string name="app_name">Messy Chef</string>
    <string name="add_button_help">Add new Recipe</string>
    <string name="add_recipe_text">Recipe</string>
    <string name="add_recipe_ingredient">Add Ingredient</string>
    <string name="manage_recipe_ingredient">Manage Ingredients</string>
    <string name="add_recipe_step">Add Step</string>
    <string name="manage_recipe_step">Manage Steps</string>
    <string name="add_recipe_done">Done</string>
    <string name="add_recipe_name_hint">Recipe Name…</string>
    <string name="ingredient_name_field">Ingredient Name</string>
    <string name="ingredient_quantity_hint">Amount</string>
    <string name="empty_field_error_msg">ERROR: A value is required</string>
    <string name="add_take_ingredient_step">Add Take Ingredient</string>
    <string name="add_process_ingredient_step">Add Process</string>
    <string name="add_timer_step">Add Timer</string>
    <string name="empty_ingredient_list_message">Add Ingredients for your Recipe</string>
    <string name="cancel_delete">No</string>
    <string name="confirm_delete">Confirm</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="ingredient_delete_confirm_title">Confirm Delete ?</string>
    <string name="ingredient_delete_confirm_message">This operation cannot be undone</string>
    <string name="empty_step_list_message">Add Step to your Recipe</string>
    <string name="take_ingredient_hint">Step Name</string>
    <string name="select_ingredients_text">Select Ingredients</string>
    <string name="process_name_placeholder">Name</string>
    <string name="process_description_placeholder">Description</string>
    <string name="timer_step_name">Timer Name</string>
    <string name="default_time_string" translatable="false">00:00:00</string>
    <string name="empty_recipe_list_message">Create new Recipes...</string>
    <string name="modify_recipe_button">Modify Recipe</string>
    <string name="start_recipe_button">Start Recipe</string>
    <string name="delete_recipe_button">Delete Recipe</string>
    <string name="ingredient_count">Ingredients:</string>
    <string name="step_count">Steps:</string>
    <string name="prev_step_button">◄ Back</string>
    <string name="next_step_button">Next ►</string>
    <string name="show_ingredients_button">Show Ingredient List</string>
    <string name="timer_step" translatable="false">Timer</string>
    <string name="process_ingredient_step_name">Process</string>
    <string name="take_ingredient_step_name">Take Ingredients</string>
    <string name="showIngredients_step">Ingredient List</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="ingredient_list_button_back">Back to Recipe Step</string>
    <string name="delete_recipe_message">Delete</string>
    <string name="delete_recipe_title">Delete Recipe</string>
    <string name="global_timer_clock_message">Global Timer</string>
    <string name="step_timer_clock">Step Timer</string>
    <string name="start_timer_button">Start</string>
    <string name="stop_timer_button">Stop</string>
    <string name="snooze_button_text">Snooze</string>
    <string name="start_timer_service">Start Recipe Timer</string>
    <string name="stop_timer_service">Timer over</string>
    <string name="pause_timer_button">Pause</string>
    <string name="channel_name" translatable="false">TIMER_NOTIFICATION_CHANNEL</string>
    <string name="channel_description" translatable="false">"Timer notification Channel "</string>
    <string name="step_timer_over">Intermediate Timer</string>
    <string name="global_timer_over">Timer done</string>
    <string name="last_step">Recipe done</string>
    <string name="recipe_done">Your dish is ready. Enjoy!</string>
    <string name="back_to_recipe_list_text">Back to Recipe List</string>
    <string name="back_to_recipe_menu">Back to Recipe Menu</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="english" translatable="false">English</string>
    <string name="delete_step">Delete Step</string>
    <string name="export_menu">Export Recipes</string>
    <string name="import_menu">Import Recipes</string>
    <string name="remove_selection">Unselect Step</string>
    <string name="filter_placeholder">Filter...</string>
    <string name="filter_name">By Recipe Name</string>
    <string name="filter_ingredient">By Ingredient</string>
    <string name="import_done">Import Complete</string>
    <string name="import_start">Start Recipe Import</string>
    <string name="export_start">Start Recipe Export</string>
    <string name="export_done">Export Done</string>
    <string name="very_easy">Very Easy</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="recipe_complexity">Recipe Complexity</string>
    <string name="complexity">Complexity:</string>
    <string name="filter_complexity">By Complexity</string>
    <string name="snooze">Click to Snooze</string>
    <string name="recipe_time">Estimated Time</string>
    <string name="duration">Estimated Time: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_by_time">Select Recipe Duration</string>
    <string name="filter_by_duration">By Duration</string>
</resources>