<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeListActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/filter_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TableRow>

                    <RadioButton
                        android:id="@+id/filter_by_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/filter_name" />

                    <RadioButton
                        android:id="@+id/filter_by_ingredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/filter_ingredient" />
                </TableRow>

                <TableRow>

                    <RadioButton
                        android:id="@+id/filter_by_complexity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/filter_complexity" />


                    <RadioButton
                        android:id="@+id/filter_by_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/filter_by_duration" />
                </TableRow>
            </TableLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/list_view_recipe_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/add_button_help"
            android:onClick="addNewRecipe"
            android:text="@string/add_recipe_text"
            android:tooltipText="@string/add_button_help"
            app:icon="@android:drawable/ic_input_add" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>