<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowRecipeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_name_text_view"
            android:textSize="28sp"
            android:textAlignment="center"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="9"

                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/ingredient_count"
                    android:textSize="18sp"
                    android:layout_weight="2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:id="@+id/ingredient_count_text_view"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    />

                <Space
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/complexity"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    android:id="@+id/recipe_complexity_view"
                    />


            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_weight="9"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/step_count"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    android:id="@+id/step_count_text_view"
                    />

                <Space
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/duration"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:layout_weight="2"

                    android:id="@+id/recipe_duration"
                    />

            </TableRow>

        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_recipe_button"
            android:onClick="startRecipe"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modifyRecipe"
            android:text="@string/modify_recipe_button"/>



        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteRecipe"
            android:text="@string/delete_recipe_button"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>