<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExecuteRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_name_text_view"
            android:textAlignment="center"
            android:textSize="28sp"/>
        <View style="@style/Divider.Horizontal"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/step_type_text_view"
            android:textAlignment="center"
            android:textSize="18sp"/>
        <View style="@style/Divider.Horizontal"/>



        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_step_fragment"
            />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_ingredients_button"
            android:id="@+id/show_ingredient_list_button"
            android:onClick="showIngredientList"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_weight="5">

                <com.google.android.material.button.MaterialButton
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:text="@string/prev_step_button"
                    android:id="@+id/prev_step_button"
                    android:onClick="showPervStep"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_weight="1"

                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:text="@string/next_step_button"
                    android:onClick="showNextStep"
                    android:id="@+id/next_step_button"
                    android:layout_height="wrap_content"/>
            </TableRow>

        </TableLayout>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>